----------------------------------------------------------------------
 OmegaT 3.0.8 update 1
----------------------------------------------------------------------
   0 Enhancement
   0 Bug fix
   11 Localisation updates
----------------------------------------------------------------------
3.0.8 update 1 vs. 3.0.8

  Localisation updates:

  - Italian localisation updated to 3.0.8 (UI, Documentation)
  - Hungarian localisation updated to 3.0.8 (Instant Start)
  - Czech localisation updated to 3.0.2 (UI, Documentation)
  - German localisation updated to 3.0 (UI)
  - Russian localisation updated to 3.0.3 (UI, Documentation)
  - Greek localisation updated to 3.0 (Documentation)
  - Belarus localisation updated to 3.0 (UI, Instant Start, Readme)
  - Korean localisation added at 3.0.7 (UI, Instant Start, Readme)
  - Dutch localisation updated to 3.0.8 (UI)
  - Simplified Chinese localisation updated to 3.0.8 (UI)
  - Japanese localisation updated to 3.0.8 (UI, Documentation)

----------------------------------------------------------------------
 OmegaT 3.0.8
----------------------------------------------------------------------
  10 Enhancements
   4 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.0.8 vs. 3.0.7

  Implemented requests:

  - Show XLIFF trans-unit note as a comment 
  https://sourceforge.net/p/omegat/feature-requests/803/

  - Feedback on console for number of glossary entries fetched
  https://sourceforge.net/p/omegat/feature-requests/750/

  Other enhancements:
  
  - New debugging information about team projects available in the logs
(if org.omegat.level=FINEST is set in logger.properties)

  - A graphical version of the script check_same_segments.groovy was 
added: show_same_segments.groovy

  - The ${diff} display is now "optimized" by concatenating consecutive 
inserts or deletes separated only by whitespace. This makes the diff more 
readable.
